--- a/css/main.css
+++ b/css/main.css
@@ -20,17 +20,55 @@ body{
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-form.userform label{
+form.itemform label{
 	width: 20%;
 	float: left;
 }
 
-form.userform input{
+form.itemform input{
 
 	width: 50%;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-form.userform button{
+form.itemform button{
+	width: 200px
+}
+form.checkpin label{
+	width: 20%;
+	float: left;
+}
+
+form.checkpin input{
+
+	width: 200px;
+	height: 40px;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+form.checkpin button{
+	width: 200px
+}
+
+.adduser form.userform label{
+	width: 200px;
+	float: left;
+}
+
+.adduser form.userform input{
+
+	width: 500px;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+
+}
+
+.adduser form.userform button{
 	width: 200px
 }
 button{
@@ -39,6 +77,13 @@ button{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+
+}
+label.notempty{
+	background: #aaa;
+	height: 10px;
+	padding: 8px;
+
 
 }
 p{
@@ -60,9 +105,27 @@ p.pinmsg{
 	background: #aaa;
 	color: black;
 	padding: 10px;
-	font-size: 16px;
+	font-size: 14px;
 	text-align: center;
-	width: 700px;
+	width: 695px;
+
+}
+p.errormsg{
+	background: red;
+	color: black;
+	padding: 10px;
+	font-size: 14px;
+	text-align: center;
+	width: 695px;
+
+}
+p.successmsg{
+	background: green;
+	color: black;
+	padding: 10px;
+	font-size: 14px;
+	text-align: center;
+	width: 695px;
 
 }
 p.success{
@@ -108,4 +171,7 @@ table.masterlist th{
 table.masterlist td{
 	padding: 10px;
 	background: #eee;
+}
+p.link{
+	float: center;
 }
