--- a/css/main.css
+++ b/css/main.css
@@ -173,3 +173,10 @@ table.masterlist td{
 	padding: 10px;
 	background: #eee;
 }
+
+button.apply {
+	margin :0;
+	margin-top: 50px;
+	width: 200px;
+	background: #eee ; 
+}
