--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@
 	margin: 0;
 }
 body{
+	margin: 0;
+	background: url('image1.jpg');
+	background-size: 1440px 800px;
+	background-repeat:no-repeat;
+    display: compact;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 14px;
 }
