--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 *{
 	margin: 0;
 }
-body{
+body {
 	margin: 0;
-	background: url('img/image1.jpg');
+	background: url('/img/image1.jpg');
 	background-size: 1440px 800px;
 	background-repeat:no-repeat;
     display: compact;
